Simplify package structure: use a single model package